# local-realtime-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
app/: __init__.py  answer_cleanup.py  answer_strategy.py  cache.py  config.py  config_validation.py  direct_answers.py  evidence.py  freshness.py  knowledge_prior.py  lmstudio.py  local_status.py  main.py  mcp_payload.py  modes.py  observability.py  pipeline.py  planner.py  prompts.py  provider_health.py  ranking.py  request_id.py  search_backend_health.py  security.py  source_policy.py  streaming.py  validator.py  weather.py
benchmarks/: questions.json
docs/: docker.md  launch-checklist.md
examples/: prompts.md
mcp/: lmstudio.mcp.json
scripts/: benchmark.py  generate_lmstudio_mcp_config.py  mcp_server.py  run_manual_questions.py  smoke_search.py  start_mcp_with_backend.ps1  start_search_backend.ps1
tests/: test_answer_cleanup.py  test_answer_strategy.py  test_benchmark_regression.py  test_cache.py  test_config_validation.py  test_direct_answers.py  test_docker_assets.py  test_duckduckgo.py  test_evidence_filter.py  test_fetcher.py  test_freshness.py  test_generate_lmstudio_mcp_config.py  test_knowledge_prior.py  test_lmstudio.py  test_local_status.py  test_mcp_payload.py  test_mcp_server_loop_guard.py  test_modes.py  test_observability.py  test_official_hints.py  test_pipeline_search_cache.py  test_planner.py  test_planner_benchmark_queries.py  test_planner_generalization.py  test_prompts.py  test_provider_health.py  (+10 more)
(+14 files in other folders)
