[project]
name = "local-realtime-search"
version = "0.1.0"
description = "Fast realtime web evidence layer for LM Studio local models."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
crawl4ai = [
  "crawl4ai>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
